[project]
name = "musiclyricsir"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "datasets>=4.7.0",
    "faiss-cpu>=1.13.2",
    "ijson>=3.5.0",
    "nltk>=3.9.3",
    "rank-bm25>=0.2.2",
    "sentence-transformers>=5.3.0",
]
